[tool.poetry]
name = "pachama-demo"
version = "0.1.0"
description = ""
authors = ["Pierre Louvart <pierre.louvart@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
xarray = "^2023.12.0"
jupyter = "^1.0.0"
stackstac = "^0.5.0"
scikit-learn = "^1.3.2"
ipyleaflet = "^0.18.1"
pystac-client = "^0.7.5"
panda = "^0.3.1"
geopandas = "^0.14.1"
pillow = "^10.1.0"
rioxarray = "^0.15.0"
matplotlib = "^3.8.2"
scikit-image = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
